<resources>
    <string name="app_name">Github User App</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="detail_button">detail</string>
    <string name="repo">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="back">BACK</string>
    <string name="search">Username</string>
    <string name="search_hint">Pencarian...</string>
    <string name="detail">Detail User</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="darkm">Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="favorite_pg">Favorite User</string>
</resources>